@@ -2,7 +2,7 @@
 
     util.h
 
-    Copyright (C) 1998 Andrew Veliath
+    Copyright (C) 1998 Andrew T. Veliath
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
